# Turbofan-RUL-Prediction

./: .gitignore  Dockerfile  FINAL_INSTRUCTIONS.md  LICENSE  PRESENTATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CRITERIA.md  README_OLD.md  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
data/: README.md
deployment/: README.md  deploy_gcp.sh
docs/: ARCHITECTURE.md
models/: config.pkl  feature_names.pkl  model_metadata.pkl  scaler.pkl  xgboost_rul_model.pkl
scripts/: docker_run.sh  quick_start.sh  setup.sh
